# nova-backup

./: .gitignore  LICENSE  NovaBackup.hs  README.md  kill_all_celery_tasks.py  most_recent_backups.py  nova-backup-util.cabal  novabackup.py  print_active_jobs.py  print_active_tasks.py  print_task_info.py  run_backups.py  run_celery.sh  runcron.sh  test_tasks.py
