name:                nova-backup-util
version:             0.1.0.0
synopsis:            Utility for backing up Nectar VMs using the nova command line client.
-- description:         
homepage:            https://github.com/CVL-dev/nova-backup
license:             GPL
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo.hamalainen@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable nova-backup-util
  main-is:             NovaBackup.hs
  -- other-modules:       
  build-depends:       base, process, parsec
